<resources>
    <string name="app_name">Sports Trip Planner</string>
    <string name="title_activity_maps">Map</string>
    <string name="filterText">Filter Games</string>
    <string name="leagueFilterText">League</string>
    <string name="filterButtonText">Filter</string>
    <string name="filterTextDate">Date</string>
    <string name="dateFromText">From</string>
    <string name="dateToText">To</string>
    <string name="filterTextTeamName">Team Name</string>
    <string name="nhlText">NHL</string>
    <string name="nflText">NFL</string>
   <!-- Leagues for filtering -->
   <string-array name="leagueOptions">
      <item>NHL</item>
      <item>NFL</item>
   </string-array>
   <!-- NHL Team Names for filter -->
   <string-array name="NHLTeams">
      <item>All Teams</item>
      <item>Anaheim Ducks</item>
      <item>Arizona Coyotes</item>
      <item>Boston Bruins</item>
      <item>Buffalo Sabres</item>
      <item>Calgary Flames</item>
      <item>Carolina Hurricanes</item>
      <item>Chicago Blackhawks</item>
      <item>Colorado Avalanche</item>
      <item>Columbus Blue Jackets</item>
      <item>Dallas Stars</item>
      <item>Detroit Red Wings</item>
      <item>Edmonton Oilers</item>
      <item>Florida Panthers</item>
      <item>Los Angeles Kings</item>
      <item>Minnesota Wild</item>
      <item>Montreal Canadiens</item>
      <item>Nashville Predators</item>
      <item>New Jersey Devils</item>
      <item>New York Islanders</item>
      <item>New York Rangers</item>
      <item>Ottawa Senators</item>
      <item>Philadelphia Flyers</item>
      <item>Pittsburgh Penguins</item>
      <item>San Jose Sharks</item>
      <item>St. Louis Blues</item>
      <item>Tampa Bay Lightnings</item>
      <item>Toronto Maple Leafs</item>
      <item>Vancouver Canucks</item>
      <item>Vegas Golden Knights</item>
      <item>Washington Capitals</item>
      <item>Winnipeg Jets</item>
   </string-array>
   <!-- NFL Team Names for filter -->
   <string-array name="NFLTeams">
      <item>All Teams</item>
      <item>Arizona Cardinals</item>
      <item>Atlanta Falcons</item>
      <item>Buffalo Bills</item>
      <item>Baltimore Ravens</item>
      <item>Carolina Panthers</item>
      <item>Cincinnati Bengals</item>
      <item>Cleveland Browns</item>
      <item>Chicago Bears</item>
      <item>Dallas Cowboys</item>
      <item>Denver Broncos</item>
      <item>Detroit Lions</item>
      <item>Green Bay Packers</item>
      <item>Houston Texans</item>
      <item>Indianapolis Colts</item>
      <item>Jacksonville Jaguars</item>
      <item>Kansas City Chiefs</item>
      <item>Los Angeles Chargers</item>
      <item>Los Angeles Rams</item>
      <item>Miami Dolphins</item>
      <item>Minnesota Vikings</item>
      <item>New England Patriots</item>
      <item>New Orleans Saints</item>
      <item>New York Giants</item>
      <item>New York Jets</item>
      <item>Oakland Raiders</item>
      <item>Philadelphia Eagles</item>
      <item>Pittsburgh Steelers</item>
      <item>San Francisco 49ers</item>
      <item>Seattle Seahawks</item>
      <item>Tampa Bay Buccaneers</item>
      <item>Tennessee Titans</item>
      <item>Washington Football Team</item>
   </string-array>
    <!-- NHL Team Names -->
   <string name="anaheim">Anaheim Ducks</string>
   <string name="arizona">Arizona Coyotes</string>
   <string name="boston">Boston Bruins</string>
   <string name="buffalo">Buffalo Sabres</string>
   <string name="calgary">Calgary Flames</string>
   <string name="carolina">Carolina Hurricanes</string>
   <string name="chicago">Chicago Blackhawks</string>
   <string name="colorado">Colorado Avalanche</string>
   <string name="columbus">Columbus Blue Jackets</string>
   <string name="dallas">Dallas Stars</string>
   <string name="detroit">Detroit Red Wings</string>
   <string name="edmonton">Edmonton Oilers</string>
   <string name="florida">Florida Panthers</string>
   <string name="losAngeles">Los Angeles Kings</string>
   <string name="minnesota">Minnesota Wild</string>
   <string name="montreal">Montreal Canadiens</string>
   <string name="nashville">Nashville Predators</string>
   <string name="newJersey">New Jersey Devils</string>
   <string name="newYorkI">New York Islanders</string>
   <string name="newYorkR">New York Rangers</string>
   <string name="ottawa">Ottawa Senators</string>
   <string name="philadelphia">Philadelphia Flyers</string>
   <string name="pittsburgh">Pittsburgh Penguins</string>
   <string name="sanJose">San Jose Sharks</string>
   <string name="stLouis">St. Louis Blues</string>
   <string name="tampa">Tampa Bay Lightning</string>
   <string name="toronto">Toronto Maple Leafs</string>
   <string name="vancouver">Vancouver Canucks</string>
   <string name="vegas">Vegas Golden Knights</string>
   <string name="washington">Washington Capitals</string>
   <string name="winnipeg">Winnipeg Jets</string>
    <!-- NFL Team names -->
   <string name="arizonaNFL">Arizona Cardinals</string>
   <string name="atlantaNFL">Atlanta Falcons</string>
   <string name="buffaloNFL">Buffalo Bills</string>
   <string name="baltimoreNFL">Baltimore Ravens</string>
   <string name="carolinaNFL">Carolina Panthers</string>
   <string name="cincinnatiNFL">Cincinnati Bengals</string>
   <string name="clevelandNFL">Cleveland Browns</string>
   <string name="chicagoNFL">Chicago Bears</string>
   <string name="dallasNFL">Dallas Cowboys</string>
   <string name="denverNFL">Denver Broncos</string>
   <string name="detroitNFL">Detroit Lions</string>
   <string name="greenbayNFL">Green Bay Packers</string>
   <string name="houstonNFL">Houston Texans</string>
   <string name="indianapolisNFL">Indianapolis Colts</string>
   <string name="kansasNFL">Kansas City Chiefs</string>
   <string name="losAngelesCNFL">Los Angeles Chargers</string>
   <string name="losAngelesRNFL">Los Angeles Rams</string>
   <string name="jacksonvilleNFL">Jacksonville Jaguars</string>
   <string name="miamiNFL">Miami Dolphins</string>
   <string name="minnesotaNFL">Minnesota Vikings</string>
   <string name="newEnglandNFL">New England Patriots</string>
   <string name="newOrleansNFL">New Orleans Saints</string>
   <string name="newYorkGNFL">New York Giants</string>
   <string name="newYorkJNFL">New York Jets</string>
   <string name="oaklandNFL">Oakland Raiders</string>
   <string name="philadelphiaNFL">Philadelphia Eagles</string>
   <string name="sanFranciscoNFL">San Francisco 49ers</string>
   <string name="seattleNFL">Seattle Seahawks</string>
   <string name="pittsburghNFL">Pittsburgh Steelers</string>
   <string name="tampaNFL">Tampa Bay Buccaneers</string>
   <string name="tennesseeNFL">Tennessee Titans</string>
   <string name="washingtonNFL">Washington Football Team</string>
</resources>