<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    style="@android:style/Widget.DatePicker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MapsActivity">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="375dp" />

    <TextView
        android:id="@+id/filterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/filterText"
        android:textColor="#040404"
        android:textColorHint="#FFFFFF"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/leagueFilterText"
            android:layout_width="204dp"
            android:layout_height="45dp"
            android:ems="10"
            android:gravity="start|center_vertical"
            android:text="@string/leagueFilterText"
            android:textColor="#040404"
            android:textColorHint="#FFFFFF"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/leagueDropDown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/leagueOptions"
            android:focusable="auto" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/DateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextDateFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date"
            android:text="@string/dateFromText" />

        <EditText
            android:id="@+id/editTextDateTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date"
            android:text="@string/dateToText" />
    </LinearLayout>

    <Button
        android:id="@+id/filterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filterButtonText" />

</LinearLayout>